Update startup.sh
New hazelcast startup params added.